# math-functions

./: CMakeLists.txt  MathFunctions.cpp  MathFunctions.sln  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  README.md
doc/: copy-past-helper.txt  to-do.txt
docs/: CopyPastHelper.txt  TODO.txt
include/: math-functions.hpp  math_functions.h
src/: math-functions.cpp
test/MathsFunctionsUnitTest/: MathsFunctionsUnitTest.cpp  MathsFunctionsUnitTest.vcxproj  MathsFunctionsUnitTest.vcxproj.filters
